--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -5,7 +5,7 @@
   xmlns:th="http://www.thymeleaf.org"
   xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
   
-  <head th:replace="../../head :: head" </head></head>
+  <th:head th:replace="/head :: head"></th:head>
 
   <body>
 
@@ -50,7 +50,7 @@
       </script>
     </div>
 
-    <header th:replace="../../header :: header" </header></header>
+    <th:header th:replace="/header :: header"></th:header>
 
     <div id="loginModal"
       class="modal">
@@ -219,7 +219,7 @@
       </section>
     </main>
 
-    <footer th:replace="../../footer :: footer" </footer></footer>
+    <th:footer th:replace="/footer :: footer"></th:footer>
 
     <script src="../../js/color-modes.js"></script>
     <script src="../../js/registro-login.js"></script>
