--- a/src/main/resources/templates/modificar_proveedor.html
+++ b/src/main/resources/templates/modificar_proveedor.html
@@ -5,7 +5,7 @@
   xmlns:th="http://www.thymeleaf.org"
   xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 
-  <head th:replace="/fragments/head :: head" </head></head>
+  <th:head th:replace="head.html :: head"></th:head>
 
   <body>
 
@@ -45,7 +45,7 @@
 
     
 
-    <header th:replace="/fragments/header :: header" </header></header>
+    <th:header th:replace="header.html :: header"></th:header>
 
     <div id="deleteModal"
       class="modal">
@@ -151,7 +151,7 @@
         </div>
       </div> 
     </main>
-    <footer th:replace="/fragments/footer :: footer" </footer></footer>
+    <th:footer th:replace="footer.html :: footer"></th:footer>
     <script src="../../js/color-modes.js"></script>
     <script src="../../js/borrar.js"></script>
     <script src="../../js/bootstrap.bundle.min.js"></script>
