--- a/src/main/resources/templates/proveedor_list.html
+++ b/src/main/resources/templates/proveedor_list.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en" data-bs-theme="auto" xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
-  <head th:replace="/fragments/head :: head" </head> </head>
+  <th:head th:replace="head.html :: head"></th:head>
 
   <body class="bg-gradient" style="background-image: linear-gradient(180deg, #e76b74  #D7AF70)">
 
-    <header th:replace="/fragments/header :: header" </header></header>
+    <th:header th:replace="header.html :: header"></th:header>
 
   <main id="main-content">
     
@@ -65,7 +65,7 @@
   </div>
   </main>
 
-  <div><footer th:replace="/fragments/footer :: footer" </footer></div>
+  <th:footer th:replace="footer.html :: footer"></th:footer>
   <script src="../static/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
