--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -5,7 +5,7 @@
   xmlns:th="http://www.thymeleaf.org"
   xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
   
-  <th:head th:replace="head.html :: head"></th:head>
+  <th:head th:replace="./fragments/head.html :: head"></th:head>
 
   <body>
 
