--- a/src/main/resources/templates/cliente_list.html
+++ b/src/main/resources/templates/cliente_list.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="en" data-bs-theme="auto" xmlns:th="http://www.thymeleaf.org"
     xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
-    <th:head th:replace="head.html :: head"> </th:head>
+    <th:head th:replace="./fragments/head.html :: head"></th:head>
 
     <body>
 
-        <th:header th:replace="header.html :: header"></th:header>
+        <th:header th:replace="./fragments/header.html :: header"></th:header>
 
         <main id="main-content">
 
@@ -97,7 +97,7 @@
 
         </main>
 
-        <th:footer th:replace="footer.html :: footer"></th:footer>
+        <th:footer th:replace="./fragments/footer.html :: footer"></th:footer>
             <script src="../../js/color-modes.js"></script>
             <script src="../../js/borrar.js"></script>
             <script src="../../js/bootstrap.bundle.min.js"></script>
