--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -50,7 +50,7 @@
       </script>
     </div>
 
-    <th:header th:replace="header.html :: header"></th:header>
+    <th:header th:replace="./fragments/header.html :: header"></th:header>
 
     <div id="loginModal"
       class="modal">
@@ -219,7 +219,7 @@
       </section>
     </main>
 
-    <th:footer th:replace="footer.html :: footer"></th:footer>
+    <th:footer th:replace="./fragments/footer.html :: footer"></th:footer>
 
     <script src="../../js/color-modes.js"></script>
     <script src="../../js/registro-login.js"></script>
