--- a/src/main/resources/templates/modificar.html
+++ b/src/main/resources/templates/modificar.html
@@ -5,7 +5,7 @@
   xmlns:th="http://www.thymeleaf.org"
   xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 
-  <th:head th:replace="head.html :: head"></th:head>
+  <th:head th:replace="./fragments/head.html :: head"></th:head>
 
   <body>
 
@@ -97,7 +97,7 @@
       </script>
     </div>
 
-    <th:header th:replace="header.html :: header"></th:header>
+    <th:header th:replace="./fragments/header.html :: header"></th:header>
 
     <div id="deleteModal"
       class="modal">
@@ -274,7 +274,7 @@
       </div>
     </main>
 
-    <th:footer th:replace="footer.html :: footer"></th:footer>
+    <th:footer th:replace="./fragments/footer.html :: footer"></th:footer>
     <script src="../../js/color-modes.js"></script>
     <script src="../../js/borrar.js"></script>
     <script src="../../js/bootstrap.bundle.min.js"></script>
