--- a/src/main/resources/templates/modificar_proveedor.html
+++ b/src/main/resources/templates/modificar_proveedor.html
@@ -5,9 +5,11 @@
   xmlns:th="http://www.thymeleaf.org"
   xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 
-  <th:head th:replace="head.html :: head"></th:head>
+  <th:head th:replace="./fragments/head.html :: head"></th:head>
 
   <body>
+
+    
 
     <div th:if="${exito}">
       <script th:inline="javascript">
@@ -45,7 +47,7 @@
 
     
 
-    <th:header th:replace="header.html :: header"></th:header>
+    <th:header th:replace="./fragments/header.html :: header"></th:header>
 
     <div id="deleteModal"
       class="modal">
@@ -151,7 +153,7 @@
         </div>
       </div> 
     </main>
-    <th:footer th:replace="footer.html :: footer"></th:footer>
+    <th:footer th:replace="./fragments/footer.html :: footer"></th:footer>
     <script src="../../js/color-modes.js"></script>
     <script src="../../js/borrar.js"></script>
     <script src="../../js/bootstrap.bundle.min.js"></script>
