--- a/src/main/resources/templates/profesion_registro.html
+++ b/src/main/resources/templates/profesion_registro.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="en" data-bs-theme="auto" xmlns:th="http://www.thymeleaf.org"
   xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
-  <th:head th:replace="head.html :: head"></th:head>
+  <th:head th:replace="./fragments/head.html :: head"></th:head>
 
   <body class="bg-gradient"
     style="background-image: linear-gradient(180deg, #e76b74  #D7AF70)">
 
-    <th:header th:replace="header.html :: header"></th:header>
+    <th:header th:replace="./fragments/header.html :: header"></th:header>
 
     <main id="main-content">
       <div
@@ -40,7 +40,7 @@
         </div>
       </main>
 
-      <th:footer th:replace="footer.html :: footer"></th:footer>
+      <th:footer th:replace="./fragments/footer.html :: footer"></th:footer>
         <script src="../../js/color-modes.js"></script>
         <script src="../../js/borrar.js"></script>
         <script src="../../js/bootstrap.bundle.min.js"></script>
